<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.detail.MovieDetailFragment"
    android:animateLayoutChanges="true">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/todo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradiente"/>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:clipToPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/img_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/todo" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="349dp" />

    <TextView
        android:id="@+id/txv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        tools:text="@string/titulo"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cv"

        />

    <TextView
        android:id="@+id/txv_rating"
        android:layout_width="152dp"
        android:layout_height="18dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_star"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/txv_released"
        app:layout_constraintTop_toTopOf="@+id/cv"
        tools:text="5.1 (4123 Reviews)" />

    <TextView
        android:id="@+id/txv_released"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_calendar"
        app:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/txv_language"
        app:layout_constraintTop_toBottomOf="@+id/txv_rating"
        tools:text="Released 20/11/2021" />

    <TextView
        android:id="@+id/txv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_language"
        android:drawablePadding="8dp"
        tools:text="Lenguaje en Español"
        app:drawableTint="@color/white"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txv_released"
        app:layout_constraintStart_toEndOf="@+id/cv"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/lineal_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/cv"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_goneMarginStart="16dp"
        app:layout_goneMarginTop="8dp"
        android:animateLayoutChanges="true"
        tools:ignore="UseCompoundDrawables">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bookmark"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookmark"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineal_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/lineal_share"
        app:layout_constraintStart_toEndOf="@+id/lineal_bookmark"
        app:layout_constraintTop_toTopOf="@+id/lineal_bookmark"
        app:layout_goneMarginStart="16dp"
        app:layout_goneMarginTop="8dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_favorite_border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineal_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lineal_favorite"
        app:layout_goneMarginStart="16dp"
        app:layout_goneMarginTop="8dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/overview"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/txv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:text="@string/d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>